// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`css > emit > should work with emitted processed 'basic-emit' css > js 1`] = `
"'use strict';

const lit = require('lit');

const styles = lit.css\`main {
    display: flex;
}
\`;

console.log(styles);
"
`;

exports[`css > emit > should work with emitted processed 'basic-emit' css > js 2`] = `
"import { css } from 'lit';

const styles = css\`main {
    display: flex;
}
\`;

console.log(styles);
"
`;

exports[`css > emit > should work with emitted processed 'meta' css > js 1`] = `
"'use strict';

var deps = ["./shared.css"];
var modules_5a199c00 = {"main":"style_main_d56bae01 shared_bold_865fbff3"};

console.log(modules_5a199c00, deps);
"
`;

exports[`css > emit > should work with emitted processed 'meta' css > js 2`] = `
"var deps = ["./shared.css"];
var modules_5a199c00 = {"main":"style_main_d56bae01 shared_bold_865fbff3"};

console.log(modules_5a199c00, deps);
"
`;

exports[`css > emit > should work with emitted processed 'sourcemap-emit' css > js 1`] = `
"'use strict';

const lit = require('lit');

const styles = lit.css\`main {
    display: flex;
}

/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInNyYy9zdHlsZS5jc3MiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBQUE7SUFDSSxhQUFhO0FBQ2pCIiwic291cmNlc0NvbnRlbnQiOlsibWFpbiB7XG4gICAgZGlzcGxheTogZmxleDtcbn1cbiJdfQ== */\`;

console.log(styles);
"
`;

exports[`css > emit > should work with emitted processed 'sourcemap-emit' css > js 2`] = `
"import { css } from 'lit';

const styles = css\`main {
    display: flex;
}

/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInNyYy9zdHlsZS5jc3MiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBQUE7SUFDSSxhQUFhO0FBQ2pCIiwic291cmNlc0NvbnRlbnQiOlsibWFpbiB7XG4gICAgZGlzcGxheTogZmxleDtcbn1cbiJdfQ== */\`;

console.log(styles);
"
`;

exports[`css > emit > should work with emitted processed 'sourcemap-transform' css > js 1`] = `
"'use strict';

const lit = require('lit');

const styles = lit.css\`main {
    display: flex;
}

/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInZpcnQiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBQUE7SUFDSSxhQUFhO0FBQ2pCIiwic291cmNlc0NvbnRlbnQiOlsibWFpbiB7XG4gICAgZGlzcGxheTogZmxleDtcbn1cbiJdfQ== */\`;

console.log(styles);
"
`;

exports[`css > emit > should work with emitted processed 'sourcemap-transform' css > js 2`] = `
"import { css } from 'lit';

const styles = css\`main {
    display: flex;
}

/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInZpcnQiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBQUE7SUFDSSxhQUFhO0FBQ2pCIiwic291cmNlc0NvbnRlbnQiOlsibWFpbiB7XG4gICAgZGlzcGxheTogZmxleDtcbn1cbiJdfQ== */\`;

console.log(styles);
"
`;
